<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#abcdef"
    xmlns:design="http://schemas.android.com/apk/res-auto"

    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:shadowColor="#859ec8"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius=".001"
                android:text="@string/istikhara_title"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dua_al_istikhara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/dua_al_istikhara"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/translation_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/translation_header"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dua_al_istikhara" />

            <TextView
                android:id="@+id/translation_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/translation_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/translation_header" />

            <!-- activity_info layout file -->
            <!-- Clickable title -->
            <TextView
                android:id="@+id/transliteration_title"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="toggle_contents"
                android:text="@string/menu_button"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/translation_text"
                app:layout_constraintVertical_bias="0.0" />

            <!--content to hide/show -->
            <TextView
                android:id="@+id/transliteration_txt"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/collapsed_contents"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transliteration_title" />

            <Button
                android:id="@+id/FAQ_button"

                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="32dp"
                android:onClick="changeToFAQActivity"
                android:text="@string/FAQ_Button"
                android:textColor="#0000fe"
                android:textSize="18sp"
                android:theme="@style/FlatButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transliteration_txt"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/details_button"


                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"


                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginTop="32dp"
                android:onClick="changeToDetailsActivity"
                android:text="@string/details_button"
                android:textColor="#0000fe"
                android:textSize="18sp"
                android:theme="@style/FlatButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transliteration_txt" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>